/*
 * Copyright (C) 2017-2019 Dremio Corporation
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto2";
package dremio.fabric;

option java_package = "com.dremio.services.fabric.proto";
option java_outer_classname = "FabricProto";
option optimize_for = SPEED;
option java_generate_equals_and_hash = true;

enum RpcType {
  HANDSHAKE = 0;
  MESSAGE = 1;
}


message FabricHandshake {
  optional int32 rpc_version = 1;
  optional FabricIdentity identity = 2;
}

message FabricIdentity {
  optional string address = 1;
  optional int32 port = 2;
}

message FabricMessage {
  optional int32 protocol_id = 1;
  optional int32 inner_rpc_type = 2;
  optional bytes message = 3;
}
